# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  ${Python3_INCLUDE_DIRS}
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================


# ===================================================================
#  ソースファイルの設定
# ===================================================================


# ===================================================================
#  ターゲットの設定
# ===================================================================

ym_add_object_library ( py_ymjson
  ymjson_module.cc
  PyJsonValue.cc
  )

add_library ( py_ymjsonlib
  SHARED
  $<TARGET_OBJECTS:py_ymjson_obj>
  $<TARGET_OBJECTS:ym_json_obj>
  )

set_target_properties( py_ymjsonlib
  PROPERTIES
  PREFIX ""
  OUTPUT_NAME "ymjson"
  )

target_link_libraries( py_ymjsonlib
  ${YM_LIB_DEPENDS}
  ${Python3_LIBRARIES}
  )


# ===================================================================
#  インストールターゲットの設定
# ===================================================================
