
# ===================================================================
# インクルードパスの設定
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

set ( TESTDATA_DIR "${CMAKE_CURRENT_SOURCE_DIR}/testdata/" )

add_subdirectory ( gtest )
add_subdirectory ( programs )
add_subdirectory ( pytest )


# ===================================================================
#  ソースファイルの設定
# ===================================================================
